--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,1 @@
-asgiref==3.2.7
-Django==3.0.7
-django-redis-cache==2.1.1
-gunicorn==20.0.4
-psycopg2==2.8.5
-psycopg2-binary==2.8.5
-pytz==2020.1
-redis==3.5.3
-six==1.15.0
-sqlparse==0.3.1
+-r requirements-dev.txt
