--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,20 @@
 asgiref==3.2.7
+boto3==1.14.0
+botocore==1.17.0
 Django==3.0.7
 django-redis-cache==2.1.1
+django-storages==1.9.1
+docutils==0.15.2
 gunicorn==20.0.4
+jmespath==0.10.0
 Pillow==7.1.2
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
+python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2020.1
 redis==3.5.3
+s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.3.1
+urllib3==1.25.9
