--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,7 @@ celery==4.4.5
 Django==3.0.7
 django-celery-results==1.2.1
 django-redis-cache==2.1.1
+django-rest-auth==0.9.5
 django-storages==1.9.1
 djangorestframework==3.11.0
 docutils==0.15.2
