--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,6 +10,7 @@ defusedxml==0.6.0
 Django==3.0.7
 django-allauth==0.42.0
 django-celery-results==1.2.1
+django-cors-headers==3.4.0
 django-redis-cache==2.1.1
 django-rest-auth==0.9.5
 django-storages==1.9.1
