--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,6 +12,7 @@ django-allauth==0.42.0
 django-celery-results==1.2.1
 django-cors-headers==3.4.0
 django-redis-cache==2.1.1
+django-referrer-policy==1.0
 django-rest-auth==0.9.5
 django-storages==1.9.1
 djangorestframework==3.11.0
@@ -26,6 +27,7 @@ oauthlib==3.1.0
 Pillow==7.1.2
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
+Pygments==2.6.1
 python-dateutil==2.8.1
 python-decouple==3.3
 python3-openid==3.1.0
