--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,6 +11,7 @@ Django==3.0.7
 django-allauth==0.42.0
 django-celery-results==1.2.1
 django-cors-headers==3.4.0
+django-csp==3.6
 django-feature-policy==3.4.0
 django-redis-cache==2.1.1
 django-referrer-policy==1.0
@@ -38,6 +39,7 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 s3transfer==0.3.3
 six==1.15.0
+sorl-thumbnail==12.6.3
 SQLAlchemy==1.3.17
 sqlparse==0.3.1
 urllib3==1.25.9
