--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,6 +13,7 @@ django-celery-results==1.2.1
 django-cors-headers==3.4.0
 django-csp==3.6
 django-feature-policy==3.4.0
+django-image-optimizer==1.0.1
 django-redis-cache==2.1.1
 django-referrer-policy==1.0
 django-rest-auth==0.9.5
@@ -32,6 +33,7 @@ psycopg2-binary==2.8.5
 Pygments==2.6.1
 python-dateutil==2.8.1
 python-decouple==3.3
+python-resize-image==1.1.19
 python3-openid==3.1.0
 pytz==2020.1
 redis==3.5.3
@@ -42,6 +44,7 @@ six==1.15.0
 sorl-thumbnail==12.6.3
 SQLAlchemy==1.3.17
 sqlparse==0.3.1
+tinify==1.5.1
 urllib3==1.25.9
 vine==1.3.0
 vulture==1.5
