--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -20,6 +20,7 @@ django-rest-auth==0.9.5
 django-storages==1.9.1
 djangorestframework==3.11.0
 docutils==0.15.2
+facebook-sdk==3.1.0
 future==0.18.2
 gunicorn==20.0.4
 idna==2.9
