--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -26,9 +26,12 @@ gunicorn==20.0.4
 idna==2.9
 importlib-metadata==1.6.1
 jmespath==0.10.0
+joblib==0.17.0
 kombu==4.6.10
+numpy==1.19.4
 oauthlib==3.1.0
 Pillow==7.1.2
+profanity-check==1.0.3
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 Pygments==2.6.1
@@ -41,10 +44,13 @@ redis==3.5.3
 requests==2.24.0
 requests-oauthlib==1.3.0
 s3transfer==0.3.3
+scikit-learn==0.23.2
+scipy==1.5.3
 six==1.15.0
 sorl-thumbnail==12.6.3
 SQLAlchemy==1.3.17
 sqlparse==0.3.1
+threadpoolctl==2.1.0
 tinify==1.5.1
 urllib3==1.25.9
 vine==1.3.0
